--- a/css/navbar.css
+++ b/css/navbar.css
@@ -88,3 +88,21 @@
     background-color: #425766;
   }  
 }
+
+
+.home-container {
+  background-color: #FCF7F3;
+  height: 350px;
+
+}
+
+.hello-message-box {
+  background-color: #FFEDC0;
+  height: 150px;
+  width : 500px;
+  border: 4px solid black;
+}
+
+img {
+  width: 80px;
+}
