--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,16 @@
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(20,20,20, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
-img {
-  width: 80px;
-  height: 80px;
+.me-image {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.circular-image { 
+  border-top-left-radius: 50% 50%; 
+  border-top-right-radius: 50% 50%; 
+  border-bottom-right-radius: 50% 50%; 
+  border-bottom-left-radius: 50% 50%; 
 }
 
 /*Home section styling*/
@@ -69,13 +76,14 @@ img {
   height: 150px;
   width : 500px;
   border: 4px solid black;
-  margin-top: 40px;
+  padding-top: 20px;
 }
 
 .scroll-down-arrow {
   position: absolute;
   top: 85%;
-  left: 50%;
+  left: 51%;
+  transform: translate(-51%,0);
 }
 
 /*About section styling*/
