--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /* bootstrap's navbar override*/
 .navbar {
   background-color: #FCF7F3;
@@ -73,7 +72,7 @@
 
 .hello-message-box {
   background-color: #FFEDC0;
-  height: 150px;
+  height: 100px;
   width : 500px;
   border: 4px solid black;
   padding-top: 20px;
@@ -81,7 +80,7 @@
 
 .scroll-down-arrow {
   position: absolute;
-  top: 85%;
+  top: 90%;
   left: 51%;
   transform: translate(-51%,0);
 }
@@ -89,7 +88,7 @@
 /*About section styling*/
 .about-container {
   background-color: #FFEDDC;
-  height: 2000px;
+  height: 850px;
   text-align: center;
   justify-content: center;
   scroll-margin-top: 58px; /*that's because of home's section padding-top*/
@@ -98,6 +97,29 @@
 .about-box {
   background-color: #FCF7F3;
   border: 4px solid black;
-  height: 100px;
-  width : 600px;
+  height: 200px;
+  width : 550px;
+  margin-top: 50px;
+  overflow: auto;
+}
+
+.about-image {
+  margin-top: 50px;
+}
+
+.mywork-container {
+  background-color: #FCF7F3;
+  height: 2000px;
+  scroll-margin-top: 58px; /*that's because of home's section padding-top*/
+  justify-content: center;
+  text-align: center;
+}
+
+.project-card {
+  background-color: #ffffff;
+  border: 4px solid black;
+  height: 300px;
+  width: 230px;
+  margin-top: 20px;
+  margin-left: 10px;
 }
