--- a/css/style.css
+++ b/css/style.css
@@ -117,9 +117,16 @@
 
 .project-card {
   background-color: #ffffff;
-  border: 4px solid black;
-  height: 300px;
-  width: 230px;
+  border: 2px solid black;
+  height: 85px;
+  width: 250px;
   margin-top: 20px;
   margin-left: 10px;
+  padding: 0px;
+  display: flex ;
+}
+
+.project-card-summary {
+  margin-left: 15px;
+  margin-top: 10px;
 }
