--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,56 @@ body {
   font-family:'Times New Roman', Times, serif;
 }
 
+h1 {
+  margin-top: 20px;
+  font-weight: bold;
+}
+
 h2 {
+  margin-top: 120px;
+  margin-bottom: 40px;
+}
+
+h4 {
+  font-weight: bold;
+}
+
+ol {
+  font-size: larger;
+}
+
+table {
+  font-family: 'Times New Roman', Times, serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 2px solid #494949;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+video {
   margin-top: 50px;
 }
 
-mark {
+.red-mark {
   background-color: #e47878;
   border: 4px solid #363636;
+}
+
+.yellow-mark {
+  background-color: #FFEDC0;
+  border: 4px solid #363636;
+}
+
+.special:hover {
+	color: #e47878;
 }
 
 /*---Bootstrap's Navbar override Section---*/
@@ -102,7 +145,7 @@ mark {
 /*---About Section---*/
 #about-section {
   background-color: #FFEDDC;
-  height: 850px;
+  height: 1300px;
   text-align: center;
   justify-content: center;
   scroll-margin-top: 58px; /*that's because of home's section padding-top*/
@@ -126,7 +169,7 @@ mark {
 /*---My-Work Section---*/
 #mywork-section {
   background-color: #FCF7F3;
-  height: 1000px;
+  height: 1200px;
   padding-top: 20px;
   scroll-margin-top: 58px; /*that's because of home's section padding-top*/
   justify-content: center;
@@ -149,7 +192,37 @@ mark {
   margin-top: 10px;
 }
 
+/* My-Interests Section */
+#interests-section {
+  background-color: #FFEDDC;
+  height: 3100px;
+  scroll-margin-top: 58px;
+  text-align: center;
+  padding-top: 20px;
+}
+
+#interests-music-section {
+  scroll-margin-top: 58px;
+}
+
+#interests-board_games-section {
+  scroll-margin-top: 58px;
+}
+
+#interests-useful_articles-section {
+  scroll-margin-top: 58px;
+}
+
+.article-box {
+  background-color:#FCF7F3;
+  padding: 10px;
+  border-radius: 12px;
+  border: 2px solid black;
+  box-shadow: 0 4px 6px 0 rgba(0,0,0,.2);
+}
+
 /*---Footer Section---*/
 #footer-section {
-  background-color: #FFEDDC;
+  background-color: #FCF7F3;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
