--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h2 {
 
 h4 {
   font-weight: bold;
+  margin-top: 10px;
 }
 
 ol {
@@ -24,6 +25,7 @@ table {
   font-family: 'Times New Roman', Times, serif;
   border-collapse: collapse;
   width: 100%;
+  margin-bottom: 10px;
 }
 
 td, th {
@@ -38,6 +40,17 @@ tr:nth-child(even) {
 
 video {
   margin-top: 50px;
+  height: auto;
+  width: 100%;
+  max-width: 500px;
+  min-width: 200px;
+}
+
+audio {
+  max-height: 100%;
+  max-width: 100%;
+  min-width: 180px;
+  margin: auto;
 }
 
 .red-mark {
@@ -121,6 +134,7 @@ video {
 #home-section {
   background-color: #FCF7F3;
   height: 100vh;
+  width: 100%;
   margin-top: 50px;
   padding-top: 58px;
   text-align: center;
@@ -133,6 +147,7 @@ video {
   padding-top: 20px;
   margin-bottom: 10px;
   border: 4px solid black;
+  overflow: auto;
 }
 
 #scroll-down-arrow {
@@ -145,20 +160,22 @@ video {
 /*---About Section---*/
 #about-section {
   background-color: #FFEDDC;
-  height: 1300px;
+  height: auto;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 100px;
+  scroll-margin-top: 58px; /*that's because of home's section padding-top*/
   text-align: center;
   justify-content: center;
-  scroll-margin-top: 58px; /*that's because of home's section padding-top*/
-  padding-top: 20px;
 }
 
 #about-box {
   background-color: #FFEDC0;
-  border: 4px solid black;
   height: 220px;
   width : 550px;
   padding-top: 20px;
   margin-top: 50px;
+  border: 4px solid black;
   overflow: auto;
 }
 
@@ -169,8 +186,9 @@ video {
 /*---My-Work Section---*/
 #mywork-section {
   background-color: #FCF7F3;
-  height: 1200px;
+  height: auto;
   padding-top: 20px;
+  padding-bottom: 100px;
   scroll-margin-top: 58px; /*that's because of home's section padding-top*/
   justify-content: center;
   text-align: center;
@@ -178,12 +196,13 @@ video {
 
 .project-card {
   background-color: #ffffff;
-  border: 2px solid black;
   height: 85px;
   width: 250px;
   margin-top: 20px;
   margin-left: 10px;
   padding: 0px;
+  border: 2px solid black;
+  box-shadow: 0 4px 6px 0 rgba(0,0,0,.2);
   display: flex ;
 }
 
@@ -195,34 +214,81 @@ video {
 /* My-Interests Section */
 #interests-section {
   background-color: #FFEDDC;
-  height: 3100px;
-  scroll-margin-top: 58px;
-  text-align: center;
+  height: auto;
   padding-top: 20px;
+  padding-bottom: 100px;
+  scroll-margin-top: 58px;
+  text-align: center; 
 }
 
 #interests-music-section {
-  scroll-margin-top: 58px;
+  scroll-margin-top: 70px;
+}
+
+#youtube-iframe {
+  height: 297px;
+  width: 530px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 #interests-board_games-section {
-  scroll-margin-top: 58px;
+  scroll-margin-top: 70px;
+}
+
+.responsive-board-game-image {
+  width: 100%;
+  height: auto;
+  max-height: 250px;
+  max-width: 350px;
 }
 
 #interests-useful_articles-section {
-  scroll-margin-top: 58px;
+  scroll-margin-top: 70px;
+}
+
+#interests-hobbies-section {
+  scroll-margin-top: 70px;
 }
 
 .article-box {
   background-color:#FCF7F3;
   padding: 10px;
+  margin-top: 10px;
   border-radius: 12px;
   border: 2px solid black;
   box-shadow: 0 4px 6px 0 rgba(0,0,0,.2);
+  overflow: auto;
 }
 
 /*---Footer Section---*/
 #footer-section {
   background-color: #FCF7F3;
+  height: auto;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+}
+
+/* Media Queries */
+@media screen and (max-width: 998px) {
+  h1 {
+    font-weight:500;
+  }
+  #home-section {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  #about-section {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  #youtube-iframe {
+    height: 397px;
+    width: 430px;
+  }
+}
+
+@media screen and (max-width: 480) {
+ h4{
+  font-weight: 400;
+ }
 }
